syntax = "proto3";

package lifequards;

option go_package = "github.com/szbobrowski/master-thesis/emergency-services;main";
z
service LifeguardVehicleService {
  rpc CreateLifeguard(CreateLifeguardRequest) returns (CreateLifeguardResponse);
  rpc GetLifeguard(GetLifeguardRequest) returns (GetLifeguardResponse);
  rpc UpdateLifeguard(UpdateLifeguardRequest) returns (UpdateLifeguardResponse);
  rpc DeleteLifeguard(DeleteLifeguardRequest) returns (DeleteLifeguardResponse);
}

message CreateLifeguardRequest {
  string name = 1;
  string login = 2;
  string password_hash = 3;
  int32 years_of_experience = 4;
  string specialization = 5;
  bool on_mission = 6;
}

message CreateLifeguardResponse {
  int32 id = 1;
}

message GetLifeguardRequest {
  int32 id = 1;
}

message GetLifeguardResponse {
  Lifeguard lifeguard = 1;
}

message UpdateLifeguardRequest {
  int32 id = 1;
  string name = 2;
  string login = 3;
  string password_hash = 4;
  int32 years_of_experience = 5;
  string specialization = 6;
  bool on_mission = 7;
}

message UpdateLifeguardResponse {
  bool success = 1;
}

message DeleteLifeguardRequest {
  int32 id = 1;
}

message DeleteLifeguardResponse {
  bool success = 1;
}

message Lifeguard {
  int32 id = 1;
  string name = 2;
  string login = 3;
  string password_hash = 4;
  int32 years_of_experience = 5;
  string specialization = 6;
  bool on_mission = 7;
  string created_at = 8;
}
